--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
   "dependencies": {
     "@popperjs/core": "^2.9.2",
     "bootstrap": "^5.0.2",
-    "flatpickr": "^4.6.9"
+    "flatpickr": "^4.6.9",
+    "jquery": "^3.6.0"
   }
 }
